--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
   <title>Calculator</title>
 </head>
 <body>
-  
+  <div class="calculator">
+    <div class="display">0</div>
+    <div class="buttons">
+      <button id="clear">Clear</button>
+      <button class="operator" id="divide">÷</button>
+      <button class="digit" id="seven">7</button>
+      <button class="digit" id="eight">8</button>
+      <button class="digit" id="nine">9</button>
+      <button class="operator" id="multiply">×</button>
+      <button class="digit" id="four">4</button>
+      <button class="digit" id="five">5</button>
+      <button class="digit" id="six">6</button>
+      <button class="operator" id="subtract">-</button>
+      <button class="digit" id="one">1</button>
+      <button class="digit" id="two">2</button>
+      <button class="digit" id="three">3</button>
+      <button class="operator" id="add">+</button>
+      <button class="digit" id="zero">0</button>
+      <button id="decimal">.</button>
+      <button id="equals">=</button>
+    </div>
+  </div>
 </body>
 </html>
